# information-resource-registry

./: .cruft.json  .env.public  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  context.jsonld  documentation.Makefile  index.html  infores_catalog.yaml  information_resource_registry.context.jsonld  information_resource_registry.json  information_resource_registry.jsonld  information_resource_registry.owl.ttl  information_resource_registry.shacl.ttl  information_resource_registry.yaml  information_resource_registryn.shex  linkml.Makefile  mkdocs.yml  project.Makefile  pyproject.toml  relation_map.Makefile  sitemap.xml  translator_dataflow.Makefile  validation.Makefile
.github/workflows/: deploy-docs.yaml  main.yaml  pr-auto-standardize.yaml  pr-codespell.yaml  pr-validate-infores-yaml.yaml  pr-verify-pull-request.yaml  push-main-regenerate-artifacts.yaml  release-deploy-docs.yaml  release-pypi-publish.yaml  release-upload-artifacts.yaml  weekly-generate-sankey.yaml  weekly-url-check.yaml
AgentTypeEnum/: index.html
Boolean/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
Information-Resource-Registry-Schema/: index.html
InformationResource/: index.html
InformationResourceContainer/: index.html
InformationResourceContainerCollection/: index.html
InformationResourceStatusEnum/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
KnowledgeLevelEnum/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PersonStatus/: index.html
Sparqlpath/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
age_in_years/: index.html
agent_type/: index.html
appendices/: index.html
biolink-infores-parameters/: index.html
birth_date/: index.html
consumed_by/: index.html
consumes/: index.html
description/: index.html
entries/: index.html
examples/: InformationResourceContainer-001.yaml  README.md
id/: index.html
implementation-guidance/: index.html
information-resource-registry/: index.html
information_resources/: index.html
knowledge-source-retrieval/: index.html
knowledge_level/: index.html
name/: index.html
primary_email/: index.html
project/: information_resource_registry.py
project/excel/: information_resource_registry.xlsx
project/graphql/: information_resource_registry.graphql
project/jsonld/: information-resource.context.jsonld  information-resource.jsonld  information_resource_registry.context.jsonld  information_resource_registry.jsonld
project/jsonschema/: information_resource_registry.schema.json
project/owl/: information_resource.owl.ttl
project/prefixmap/: information_resource_registry.yaml
project/protobuf/: information_resource_registry.proto
project/shacl/: information-resource.shacl.ttl  information_resource_registry.shacl.ttl
project/shex/: information-resource.shex  information_resource_registry.shex
project/sqlschema/: information_resource_registry.sql
registry/: index.html
resources/aact/: index.html
resources/aeolus/: index.html
resources/agrkb/: index.html
resources/amyco/: index.html
resources/annotator/: index.html
resources/answer-coalesce/: index.html
resources/aop-cam/: index.html
resources/aragorn/: index.html
resources/aragorn-ranker/: index.html
resources/arax/: index.html
resources/ars/: index.html
resources/atc-codes-umls/: index.html
resources/atgo/: index.html
resources/athena/: index.html
resources/automat-binding-db/: index.html
resources/automat-cam-kp/: index.html
resources/automat-cebs/: index.html
resources/automat-chem-norm/: index.html
resources/automat-chembio/: index.html
resources/automat-cord19/: index.html
resources/automat-cord19-scibite/: index.html
resources/automat-cord19-scigraph/: index.html
resources/automat-covid-phenotypes/: index.html
resources/automat-covidkop/: index.html
resources/automat-ctd/: index.html
resources/automat-drug-central/: index.html
resources/automat-ehr-clinical-connections-kp/: index.html
resources/automat-ehr-may-treat-kp/: index.html
resources/automat-foodb/: index.html
resources/automat-genome-alliance/: index.html
resources/automat-gtex/: index.html
resources/automat-gtopdb/: index.html
resources/automat-gwas-catalog/: index.html
resources/automat-hetio/: index.html
resources/automat-hetionet/: index.html
resources/automat-hgnc/: index.html
resources/automat-hmdb/: index.html
resources/automat-human-goa/: index.html
resources/automat-icees-kg/: index.html
resources/automat-intact/: index.html
resources/automat-kegg/: index.html
resources/automat-monarchinitiative/: index.html
resources/automat-mychem-info/: index.html
resources/automat-ontology-hierarchy/: index.html
resources/automat-openhealthdata-carolina/: index.html
resources/automat-panther/: index.html
resources/automat-pharos/: index.html
resources/automat-reactome/: index.html
resources/automat-renci-sri-reference-kg/: index.html
resources/automat-robokop/: index.html
resources/automat-robokop-kg/: index.html
resources/automat-sri-reference-kg/: index.html
resources/automat-string-db/: index.html
resources/automat-text-mining-provider/: index.html
resources/automat-ubergraph/: index.html
resources/automat-ubergraph-nonredundant/: index.html
resources/automat-viral-proteome/: index.html
resources/bfo/: index.html
resources/bgee/: index.html
resources/bigclam/: index.html
resources/bigg-models/: index.html
resources/biggim/: index.html
resources/bindingdb/: index.html
resources/bio2rdf/: index.html
resources/biocatalogue/: index.html
resources/biogrid/: index.html
search/: search_index.json
status/: index.html
synonym/: index.html
tests/: __init__.py  test_data.py
utils/: generate-registry.py
vital_status/: index.html
xref/: index.html
(+1336 files in other folders)
