[tool.poetry]
name = "information-resource-registry"
version = "0.0.0"
description = "A registry of information resources used in NCATS Data Translator"
authors = ["Sierra Moxon <smoxon@lbl.gov>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/information-resource-registry/schema", "project", "src/information-resource-registry/datamodel", "src/information-resource-registry/scripts"]

[tool.poetry.scripts]
add_consume_info = "information_resource_registry.relation_map.add_consume_info:main"
aragorn_kps = "information_resource_registry.relation_map.aragorn_kps:main"
arax_kps = "information_resource_registry.relation_map.arax_kps:main"
bte_sp = "information_resource_registry.relation_map.bte_sp:main"
extract_consume_info = "information_resource_registry.relation_map.extract_consume_info:main"
generate_sankey = "information_resource_registry.relation_map.generate_sankey:main"
molepro_consume = "information_resource_registry.relation_map.molepro_consume:main"
rtx_kg2 = "information_resource_registry.relation_map.rtx_kg2:main"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dependencies]
python = "^3.10"
curies = "^0.7.4"
prefixmaps = "^0.2.0"
pyyaml = "^6.0.1"
stringcase = "^1.2.0"
pytest = "^7.3.1"
beautifulsoup4 = ">=4.0.0"
kaleido = "0.2.1"
pandas = "^2.2.3"
plotly = "^5.24.1"
yamllint = "^1.35.1"

[tool.poetry.dev-dependencies]
linkml = ">=1.6.3"
mkdocs = "^1.4.2"
mkdocs-material = "^9.4.8"
mkdocs-mermaid2-plugin = "^1.1.1"
schemasheets = "^0.1.14"
codespell = "^2.2.6"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["mkdocs-material"]

[tool.codespell]
skip = '.idea,.git,SEMMEDDB*,semmed*,*.svg,docs'
ignore-words-list = 'amination,ehr,mor,brite,nin,mirgate,MiRgate,EHR,nin,miR,miRNA,miRBase'
